[tool.poetry]
name = "m3-h9"
version = "0.1.0"
description = ""
authors = ["Dmytro Filin <dmitriy.fillin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
manim = "^0.18.0"
html5lib = "^1.1"
seaborn = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
